--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.14.2",
+    "dotenv>=0.9.9",
     "langchain>=0.3.27",
+    "langchain-mistralai>=0.2.12",
     "mistral>=21.0.0",
+    "pandas>=2.3.3",
+    "requests>=2.32.5",
 ]
