--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "dotenv>=0.9.9",
+    "faiss-cpu>=1.12.0",
     "langchain>=0.3.27",
+    "langchain-community>=0.3.31",
     "langchain-mistralai>=0.2.12",
     "mistral>=21.0.0",
     "pandas>=2.3.3",
     "requests>=2.32.5",
 ]
+
+[tool.setuptools]
+packages = ["Scripts"]
